# CodeGeneratorAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: BarcodeFactory.h  DataBarExpandedGenerator.h  DataBarGenerator.h  DataMatrixGenerator.h  Ean13Generator.h  IBarcodeGenerator.h  ItfGenerator.h  Pdf417Generator.h  QrCodeGenerator.h  QrGenerator.h  UpcAGenerator.h  UpcEGenerator.h
include/Barcode/: AztecGenerator.h  BarcodeFactory.h  CodabarGenerator.h  Code128Generator.h  Code39Generator.h  Code93Generator.h  Ean8Generator.h  IBarcodeGenerator.h
include/Network/: CrowNetworkServer.h  INetworkServer.h  IRouteHandler.h
src/: AztecGenerator.cpp  BarcodeFactory.cpp  CodabarGenerator.cpp  Code128Generator.cpp  Code93Generator.cpp  DataBarExpandedGenerator.cpp  DataBarGenerator.cpp  DataMatrixGenerator.cpp  Ean13Generator.cpp  ItfGenerator.cpp  Pdf417Generator.cpp  QrCodeGenerator.cpp  QrGenerator.cpp  UpcAGenerator.cpp  UpcEGenerator.cpp  main.cpp
src/Barcode/: AztecGenerator.cpp  BarcodeFactory.cpp  CodabarGenerator.cpp  Code128Generator.cpp  Code39Generator.cpp  Code93Generator.cpp  DataMatrixGenerator.cpp  Ean13Generator.cpp  Ean8Generator.cpp  ItfGenerator.cpp  Pdf417Generator.cpp  QrCodeGenerator.cpp  UpcAGenerator.cpp  UpcEGenerator.cpp
src/Network/: CrowNetworkServer.cpp
